src/test/ui/span/issue-25199.stderr
error[E0597]: `container` does not live long enough
  --> $DIR/issue-25199.rs:70:27
   |
LL |     let test = Test{test: &container};
   |                           ^^^^^^^^^^ borrowed value does not live long enough
...
LL | }
   | -
   | |
   | `container` dropped here while still borrowed
   | borrow might be used here, when `container` is dropped and runs the destructor for type `Container<'_>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
